--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,13 +1,36 @@
 @font-face {
-  font-family: 'Graphik-Regular';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/Graphik-Regular.otf') format('truetype');
+  font-family: 'Graphik-Black';
+  src: url('../fonts/Graphik-Black.otf') format('truetype');
 }
-
+@font-face {
+  font-family: 'Graphik-Bold';
+  src: url('../fonts/Graphik-Bold.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Extralight';
+  src: url('../fonts/Graphik-Extralight.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Light';
+  src: url('../fonts/Graphik-Light.otf') format('truetype');
+}
 @font-face {
   font-family: 'Graphik-Medium';
-  font-style: normal;
-  font-weight: 400;
   src: url('../fonts/Graphik-Medium.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Regular';
+  src: url('../fonts/Graphik-Regular.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Semibold';
+  src: url('../fonts/Graphik-Semibold.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Super';
+  src: url('../fonts/Graphik-Super.otf') format('truetype');
+}
+@font-face {
+  font-family: 'Graphik-Thin';
+  src: url('../fonts/Graphik-Thin.otf') format('truetype');
 }
